--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "IntroHCI",
+  "name": "RUHereYet",
   "version": "0.0.1",
-  "author": "Intro HCI Staff",
+  "author": "Kyle Sit",
   "repository": {
     "type": "git",
-    "url": "https://github.com/IntroHCI/lab4"
+    "url": "https://github.com/kyle-sit/RUHereYet"
   },
   "license": "MIT",
   "private": true,
